welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: ':' expected but ')' found.
def ligneMotif (nb){
                  ^PatternPicture:46: error: identifier expected but '}' found.
}
^